Sprint 1 complete: presenter mode, black/white toggle, full UI fixes

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>e-HBD</title>
-  <meta name="robots" content="noindex, nofollow">
+  <meta name="robots" content="noindex, noarchive, nofollow">
   <link rel="preload" href="landing.html" as="document">
   <style>
     body {
