--- a/landing.html
+++ b/landing.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>e-HBD Landing Page</title>
-  <meta name="robots" content="noindex, nofollow">
+  <meta name="robots" content="noindex, noarchive, nofollow">
   <style>
     body {
       background-color: #fdfaf6;
@@ -81,6 +81,11 @@
   <footer>
     <a href="legal.html">📜 About / Copyright</a>
   </footer>
+
+  <!--<p class="brand-credit">
+  © 2025 <a href="https://ncdigital.co.za" target="_blank">NCDIGITAL</a> — Concept, Design & Development
+</p> -->
+
 
   <script>
     let selectedLang = "en";
