--- a/quarter.html
+++ b/quarter.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Quarter Intro</title>
-  <meta name="robots" content="noindex, nofollow">
+  <meta name="robots" content="noindex, noarchive, nofollow">
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
   <style>
     body {
