--- a/landing.html
+++ b/landing.html
@@ -166,11 +166,11 @@
 
 
 
-  <!--<p class="brand-credit">
+  <p class="brand-credit">
 
   © 2025 <a href="https://ncdigital.co.za" target="_blank">NCDIGITAL</a> — Concept, Design & Development
 
-</p> -->
+</p>
 
 
 
