--- a/contents.html
+++ b/contents.html
@@ -14,6 +14,7 @@
   <!-- Sidebar Menu -->
   <div class="sidebar" id="sidebar">
     <a href="landing.html">🏠 Home</a>
+    <a href="legal.html">📜 Copyright</a>
     <a href="contents.html">📜 Contents</a>
     <a href="preface.html">📜 Preface</a>
     <a href="foreword.html">📜 Foreword</a>
